# online_store_test

./: .dockerignore  .env.example  .gitignore  .mypy.ini  Dockerfile  README.md  compose.yaml  products_fixture.json  pyproject.toml  requirements.txt  test.html
.github/workflows/: ci.yml  deploy.yml
blog/: admin.py  forms.py  models.py  tests.py  urls.py  views.py
blog/management/commands/: create_content_manager.py
blog/migrations/: 0001_initial.py
catalog/: admin.py  forms.py  models.py  services.py  tests.py  urls.py  views.py
catalog/management/commands/: add_products.py  add_products_from_fixture.py  create_moderator_group.py
catalog/migrations/: 0001_initial.py  0002_contactinfo.py  0003_alter_contactinfo_email.py  0004_alter_product_options_product_is_published.py  0005_product_owner.py
catalog/templates/: contact.html  home.html
catalog/templates/catalog/: home.html
config/: settings.py  urls.py
fixtures/: group.json  groups_content_manager.json
nginx/: nginx.conf
templates/: base.html
templates/blog/: blogpost_confirm_delete.html  blogpost_detail.html  blogpost_form.html  blogpost_list.html
templates/catalog/: category_product_list.html  contact.html  home.html  product_confirm_delete.html  product_detail.html  product_form.html
templates/includes/: menu.html
templates/users/: login.html  profile_form.html  register.html
users/: admin.py  forms.py  models.py  tests.py  urls.py  views.py
users/management/commands/: create_admin_user.py
users/migrations/: 0001_initial.py
