[tool.poetry]
name = "online-store"
version = "0.1.0"
description = ""
authors = ["Stas Chernyi <itsmeprivet@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
django = "^6.0.1"
python-dotenv = "^1.2.1"
redis = "^7.2.1"
django-redis = "^6.0.0"


[tool.poetry.group.dev.dependencies]
black = "^25.12.0"
isort = "^7.0.0"
mypy = "^1.19.1"
flake8 = "^7.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
disallow_untyped_defs = true
warn_return_any = true
exclude = [
    "venv/",
    "migrations/",
    "**/migrations/",
    ".env"
]

[tool.black]
line-length = 119
exclude = '.git'

[tool.isort]
line_length = 119